V3.0.0 (#187)
* Issue #1200 [com-archive] Detect a read-only FS and fallback to volatile DB

* Issue #1200 [helper-tools] Do not populate ProviderURIs file by default

* Allow opting-in of ProviderURIs.properties use via toggling
  property helpertools.initurifiles
* Use application-global static ServicesConnectionDetails to propagate URIs

* Issue #1200 [helper-tools] Fix regression and unit tests

* [tests] Update flaky GPS tests

* Issue #1172 [docs] Reorganize tables of content

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1172

* Issue #1131 [ctt] Allow sorting tables

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1131

* Issue #1202 [archive-sync] Initialise latestSync field at startup in archive sync provider

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1202

* Issue #1164 Update API_COMMON to version 8.0

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1164

* Issue #1201 [com-archive-tool] Backup provider data command

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1201

* Issue #1201 [com-archive-tool] Change command name from backup_provider to backup_and_clean

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1201

* [archive] Expose transactions processor for lwmcs

* [ground-proxy] Improve logging of the Heartbeat adapter

* [docs] Update OPS-SAT packaging instructions

* [pom] Add OSSRH and Gitlab deploy profiles

* [docs] Update OPS-SAT packaging instructions

* [pom] Better centralise dependency versioning

* [pom] Update Parent MO stack to v8.1

* [sdk-package] Do not emit JAR

* [pom] Autoformat POM files

* [pom] Fix build warnings

* [sim/doc] Better documentation for hybrid mode

* [package] Change POM packaging to jar to trigger all the plugins

Git revision retrieval does not work otherwise

* Issue #1119 Spotbugs fixes

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1119

* Issue #1119 Update spotbugs_exclude.xml

https://gitlab.com/esa/NMF/nmf-issues/-/issues/1119

* I